{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 41,
  "lineage": "41bf3996-cced-f80b-7214-6645e789f72a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-1:337332556540:transit-gateway/tgw-0f896c25f3b046f2a",
            "association_default_route_table_id": "tgw-rtb-0e1e3c6cdfcf8082f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit gateway",
            "dns_support": "enable",
            "id": "tgw-0f896c25f3b046f2a",
            "multicast_support": "disable",
            "owner_id": "337332556540",
            "propagation_default_route_table_id": "tgw-rtb-0e1e3c6cdfcf8082f",
            "tags": {
              "Name": "TGW"
            },
            "tags_all": {
              "Name": "TGW"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_attachment_to_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0c98c362cef0d0203",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0688fe74e36f488de"
            ],
            "tags": {
              "Name": "Transit gateway VPC attachment"
            },
            "tags_all": {
              "Name": "Transit gateway VPC attachment"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0f896c25f3b046f2a",
            "vpc_id": "vpc-0af70e50e37844d71",
            "vpc_owner_id": "337332556540"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_subnet.private_subnet",
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337332556540:internet-gateway/igw-0aabdb791fcc19721",
            "id": "igw-0aabdb791fcc19721",
            "owner_id": "337332556540",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0af70e50e37844d71"
          },
          "dependencies": [
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_to_tgw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-097df4253edd935513322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-097df4253edd93551",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0f896c25f3b046f2a",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.tgw",
            "aws_route_table.private_subnet_route_table",
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337332556540:route-table/rtb-097df4253edd93551",
            "id": "rtb-097df4253edd93551",
            "owner_id": "337332556540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0f896c25f3b046f2a",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_subnet_route_table"
            },
            "tags_all": {
              "Name": "private_subnet_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af70e50e37844d71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337332556540:route-table/rtb-01feb107801ce2920",
            "id": "rtb-01feb107801ce2920",
            "owner_id": "337332556540",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aabdb791fcc19721",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_subnet_route_table"
            },
            "tags_all": {
              "Name": "public_subnet_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af70e50e37844d71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089cb2d2828973dda",
            "route_table_id": "rtb-097df4253edd93551",
            "subnet_id": "subnet-0688fe74e36f488de"
          },
          "dependencies": [
            "aws_route_table.private_subnet_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e44cd64b1422ea8c",
            "route_table_id": "rtb-01feb107801ce2920",
            "subnet_id": "subnet-0bd56bdadc4c468fb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnet_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337332556540:subnet/subnet-0688fe74e36f488de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0688fe74e36f488de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337332556540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us_east_1_vpc_1_private_subnet"
            },
            "tags_all": {
              "Name": "us_east_1_vpc_1_private_subnet"
            },
            "vpc_id": "vpc-0af70e50e37844d71"
          },
          "dependencies": [
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337332556540:subnet/subnet-0bd56bdadc4c468fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd56bdadc4c468fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337332556540",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us_east_1_vpc_1_public_subnet"
            },
            "tags_all": {
              "Name": "us_east_1_vpc_1_public_subnet"
            },
            "vpc_id": "vpc-0af70e50e37844d71"
          },
          "dependencies": [
            "aws_vpc.aws_vpc_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:337332556540:vpc/vpc-0af70e50e37844d71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-02e80cb642d19fee5",
            "default_route_table_id": "rtb-038cdefce8c980664",
            "default_security_group_id": "sg-093f7f05950ea2f69",
            "dhcp_options_id": "dopt-0d60c4915fee382d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af70e50e37844d71",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038cdefce8c980664",
            "owner_id": "337332556540",
            "tags": {
              "Name": "us_east_1_vpc_1"
            },
            "tags_all": {
              "Name": "us_east_1_vpc_1"
            }
          }
        }
      ]
    }
  ]
}